--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #282c34;
 }
 
 .App-link {
@@ -35,4 +35,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  background-image: url('pinkwall.webp');
 }
