finally starting, first real push

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -14,7 +14,6 @@
 }
 
 .App-header {
-  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -38,5 +37,6 @@
 }
 
 body {
-  background-image: url('pinkwall.webp');
+  background-color: #FFF8EF;
 }
+ */
