--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,42 +1,39 @@
-/* .App {
-  text-align: center;
+:root {
+	--floral-white: #fff8ef;
+	--sunglow: #ffce56;
+	--burnt-sienna: #eb6a51;
+	--air-force-blue: #6689a1;
+	--outer-space: #4c5b61;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* ENTIRE PAGE, Base Style */
+
+.app {
+	text-align: center;
+	background-color: var(--floral-white);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+/* MAIN SECTION STYLES */
+
+.body {
+    padding: 0 10%;
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: #282c34;
+section {
+	padding: 100px 20px;
+	min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
-}
+@media (max-width: 768px) {
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    .overlay {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(0, 0, 0, 0.5);
+		z-index: 1000;
+	}
 }
-
-body {
-  background-color: #FFF8EF;
-}
- */
